fdo#79558: Preserve missing attributes in paragraph w:shd

The missing attributes are w:val, w:color, w:themeColor, w:themeShade,
w:themeTint, w:themeFillShade and w:themeFillTint.

Change-Id: I67dd7c367d820216c1d11f82e3430fbf550cede8